--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 	"bugs": {
 		"url": "https://github.com/jamesdfrearson/plex-telegram-notifier/issues"
 	},
-	"homepage": "https://github.com/jamesdfrearson/plex-telegram-notifier#readme"
+	"homepage": "https://github.com/jamesdfrearson/plex-telegram-notifier#readme",
+	"dependencies": {
+		"dotenv": "^16.0.1"
+	}
 }
