--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"homepage": "https://github.com/jamesdfrearson/plex-telegram-notifier#readme",
 	"dependencies": {
-		"dotenv": "^16.0.1"
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1"
 	}
 }
