--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"homepage": "https://github.com/jamesdfrearson/plex-telegram-notifier#readme",
 	"dependencies": {
+		"body-parser": "^1.20.0",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1"
 	},
