--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"body-parser": "^1.20.0",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"telegram-bot-api": "^2.0.1"
 	},
 	"devDependencies": {
 		"eslint": "^8.19.0",
