--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"body-parser": "^1.20.0",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"jest": "^28.1.3",
 		"multer": "^1.4.5-lts.1",
 		"telegram-bot-api": "^2.0.1"
 	},
