--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A simple Node.js script to listen for Webhook events from Plex, and send a message via Telegram accordingly (using a bot).",
 	"main": "src/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest ./tests --forceExit"
 	},
 	"repository": {
 		"type": "git",
