--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"express": "^4.18.1",
 		"jest": "^28.1.3",
 		"multer": "^1.4.5-lts.1",
+		"supertest": "^6.2.4",
 		"telegram-bot-api": "^2.0.1"
 	},
 	"devDependencies": {
